--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
